# cortex

./: .cortex_launcher.c  .editorconfig  .gitignore  .pre-commit-config.yaml  .ralphrc  AGENTS.md  API-Reference.md  Architecture.md  Browser-Extension.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Calibration.md  Home.md  How-It-Works.md  Makefile  NOTICE  Privacy.md  README.md  SECURITY.md  SUPPORT.md  Setup.md  Troubleshooting.md
cortex/: .env.example  README.md  __init__.py  pyproject.toml
cortex/apps/: __init__.py
cortex/apps/browser_extension/: .gitignore  .gitkeep  activity-tracker.ts  background.ts  config.ts  content.tsx  design-tokens.ts  leetcode-observer.ts  manifest.json  newtab.tsx  package.json  page-reset.css  pnpm-lock.yaml  pnpm-workspace.yaml  popup.tsx  tab-manager.ts  tsconfig.json  vitest.config.ts
cortex/apps/desktop_shell/: __init__.py  a11y.py  break_overlay.py  components.py  connections.py  controller.py  dashboard.py  history_tab.py  mac_native.py  main.py  onboarding.py  overlay.py  palette_runtime.py  recap_sheet.py  settings.py  tokens.py  tray.py
cortex/apps/vscode_extension/: .vscodeignore  cortex-somatic-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
cortex/assets/: cortex.icns
cortex/docs/: adapters.md  apis.md  architecture.md  calibration.md  deploy_anthropic.md  deploy_azure.md  setup.md
cortex/libs/: __init__.py
cortex/libs/adapters/: __init__.py  base.py  leetcode_adapter.py  registry.py
cortex/libs/auth/: __init__.py  local_token.py
cortex/libs/config/: __init__.py  defaults.yaml  ports.py  settings.py
cortex/libs/design/: __init__.py  tokens.yaml
cortex/libs/llm/: __init__.py  anthropic_client.py  pricing.py
cortex/libs/logging/: __init__.py  correlation.py  structured.py
cortex/libs/observability/: __init__.py  metrics.py
cortex/libs/ports/: __init__.py  intervention_port.py
cortex/libs/schemas/: __init__.py  activity.py  consent.py  context.py  eval.py  features.py  intervention.py  leetcode.py  longitudinal.py  native_messaging.py  realtime.py  session_history.py  session_report.py  state.py  transition_graph.py  ws_message.py  ws_message_types.py
cortex/libs/signal/: __init__.py  filters.py  peak_detection.py  windowing.py
cortex/libs/storage/: __init__.py  schema_version.py
cortex/libs/store/: __init__.py  goal_store.py  memory_store.py  redis_store.py
cortex/libs/utils/: __init__.py  async_helpers.py  atomic_write.py  macos_notifications.py  platform.py  receptivity.py  secrets.py  shell_allowlist.py
cortex/models/: README.md
cortex/scripts/: __init__.py  build_macos_app.sh  calibrate.py  cortex.spec  cortex_entitlements.plist  generate_ts_schemas.py  install_launcher.py  install_native_host.py  launcher_agent.py  native_host.py  replay_harness.py  replay_session.py  run_capture.py  run_dev.py  run_llm_server.py  seed_config.py  setup_ssh_tunnel.sh  sync_design_tokens.py  test_briefing.py  test_intervention.py
cortex/services/: __init__.py  runtime_daemon.py
cortex/services/activity_tracker/: aggregator.py  summarizer.py
cortex/services/api_gateway/: __init__.py  app.py  auth.py  routes.py  websocket_server.py
cortex/services/capture_service/: __init__.py  calibration_runner.py  face_tracker.py  pipeline.py  quality.py  webcam.py
cortex/services/consent/: __init__.py  ladder.py  policy.py
cortex/services/context_engine/: __init__.py  app_classifier.py  assembler.py  browser_adapter.py  editor_adapter.py  tab_classifier.py  terminal_adapter.py
cortex/services/eval/: __init__.py  amip.py  bandit.py  bandit_trainer.py  baseline.json  causal_report.py  helpfulness.py  policy_replay.py  regression_harness.py  tab_relevance.py
cortex/services/handover/: __init__.py  briefing.py  detector.py  snapshot.py
cortex/services/intervention_engine/: __init__.py  break_overlay.py  executor.py  leetcode_interventions.py  planner.py  restore.py  snapshot.py  trigger.py
cortex/services/janitor/: __init__.py  retention.py
cortex/services/kinematics_engine/: __init__.py  blink_detector.py  head_pose.py  posture.py
cortex/services/launcher/: __init__.py  launcher.py  project_config.py
cortex/services/llm_engine/: __init__.py  anthropic_planner.py  azure_openai.py  cache.py  client.py  cost_tracker.py  local_ollama.py  parser.py  prompts.py  remote_qwen.py
cortex/services/physio_engine/: __init__.py  pulse_estimator.py  quality_scorer.py  respiration.py  roi_extractor.py  rppg.py
cortex/services/session_report/: __init__.py  generator.py  longitudinal.py  models.py  reader.py  scheduler.py
cortex/services/state_engine/: __init__.py  amygdala_hijack.py  causal_attribution.py  destructive_struggle.py  feature_fusion.py  hypo_detector.py  leetcode_longitudinal.py  leetcode_mode_resolver.py  longitudinal.py  ml_classifier.py  parasympathetic_rebound.py  rabbit_hole.py  recovery_detector.py  rule_scorer.py  smoother.py  stress_integral.py  trigger_policy.py  zombie_detector.py
cortex/services/telemetry_engine/: __init__.py  feature_aggregator.py  focus_graph.py  input_hooks.py  window_tracker.py
cortex/services/throttle/: __init__.py  copilot_throttle.py
cortex/storage/: .gitkeep
cortex/storage/sessions/: .gitkeep
cortex/tests/: __init__.py  conftest.py
cortex/tests/eval/: test_amip_regret.py  test_ips_unbiased.py  test_safety_floor.py
cortex/tests/fixtures/: sample_context.json  sample_features.json  sample_llm_response.json
cortex/tests/integration/: test_apply_intervention_confirmation.py  test_browser_hide_restore.py  test_capture_to_state.py  test_context_to_llm.py  test_correlation_ids.py  test_cost_endpoint_schema_parity.py  test_history_api.py  test_history_error_envelopes.py  test_launch_project_name_validation.py  test_metrics_endpoint.py  test_systemic_auth_ws.py  test_vscode_fold_restore.py
cortex/tests/performance/: __init__.py  test_broadcast_throughput.py  test_bundle_size.py  test_capture_perf.py  test_startup_latency.py
cortex/tests/physio/: test_rppg_ubfc.py
cortex/tests/services/: test_a1_daemon_contracts.py  (+13 more)
(+307 files in other folders)
