[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex"
version = "0.2.1"
description = "Real-time biofeedback workspace engine for detecting cognitive overwhelm"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Cortex Maintainers", email = "noreply@cortex.invalid" }
]
maintainers = [
    { name = "Cortex Maintainers", email = "noreply@cortex.invalid" }
]
keywords = [
    "biofeedback",
    "rppg",
    "workspace",
    "cognitive-load",
    "computer-vision",
    "anthropic",
    "claude",
    "mediapipe",
    "macos",
    "signal-processing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",

    # Data Validation & Config
    # Upper bound: the bundled ``pydantic.mypy`` plugin (enabled in
    # [tool.mypy]) must stay ABI-compatible with the pinned mypy in the
    # [dev] extra. Bumping across a major requires re-validating the gate.
    "pydantic>=2.6.0,<3",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.3",

    # Computer Vision & Face Tracking
    "opencv-python>=4.9.0",
    "mediapipe>=0.10.9",

    # Signal Processing & Numerics
    "scipy>=1.12.0",
    "numpy>=1.26.0",

    # Input Telemetry
    "pynput>=1.7.6",

    # Desktop UI
    "PySide6>=6.6.0",

    # macOS Keychain for BYOK storage
    "keyring>=24.3.0",

    # HTTP Client
    "httpx>=0.26.0",

    # Anthropic SDK — production LLM path (AWS Bedrock primary,
    # direct Anthropic / Vertex as escape hatches behind the same
    # interface, per ADR-0004-style provider routing).
    "anthropic[bedrock,vertex]>=0.39.0",
    "boto3>=1.34.0",

    # ML Inference
    "onnxruntime>=1.17.0",

    # macOS-specific (optional)
    "pyobjc-framework-AVFoundation>=10.1; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.1; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.1; sys_platform == 'darwin'",
    "pyobjc-framework-CoreAudio>=10.1; sys_platform == 'darwin'",
    # P0 §3.12: UNUserNotificationCenter for OS-level intervention
    # banners when the desktop dashboard is not the key window.
    "pyobjc-framework-UserNotifications>=10.1; sys_platform == 'darwin'",

    # Structured Logging
    "structlog>=24.1.0",

    # Metrics / observability — P1-19
    "prometheus-client>=0.19.0",

    # Redis
    "redis[hiredis]>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/StevenWang-CY/cortex"
Repository = "https://github.com/StevenWang-CY/cortex"
Documentation = "https://github.com/StevenWang-CY/cortex/wiki"
Changelog = "https://github.com/StevenWang-CY/cortex/blob/main/CHANGELOG.md"
Issues = "https://github.com/StevenWang-CY/cortex/issues"
Releases = "https://github.com/StevenWang-CY/cortex/releases"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.12.0",

    # Type Checking
    # Upper bound pins the plugin-loading ABI: the in-tree gate runs with
    # ``plugins = ["pydantic.mypy"]`` and pydantic>=2.6,<3. The 1.19.x line
    # is the validated pair; lifting the cap requires re-running the full
    # ``mypy --config-file cortex/pyproject.toml cortex/ --strict`` gate.
    "mypy>=1.17.0,<1.20",

    # Linting & Formatting
    "ruff>=0.2.0",

    # Development utilities
    "ipython>=8.20.0",
    "rich>=13.7.0",
    "pyinstaller>=6.6.0",

    # Schema codegen — Pydantic → TypeScript (Debt-1 closure).
    # ``pydantic-to-typescript`` is the actively-maintained package
    # (formerly known as ``pydantic2ts``); imports as ``pydantic2ts``.
    # Requires the ``json2ts`` binary from ``json-schema-to-typescript``
    # to be on PATH (installed via ``npm i -g json-schema-to-typescript``
    # or co-located in the browser extension's pnpm workspace).
    "pydantic-to-typescript>=2.0.0",
]

# Dedicated codegen extra for CI jobs that only need the schema generator
# without pulling the full dev toolchain (mypy, pyinstaller, etc.).
codegen = [
    "pydantic-to-typescript>=2.0.0",
]

[project.scripts]
cortex-dev = "cortex.scripts.run_dev:main"
cortex-capture = "cortex.scripts.run_capture:main"
cortex-calibrate = "cortex.scripts.calibrate:main"

[tool.hatch.build.targets.wheel]
packages = ["cortex"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_webcam: marks tests that require a webcam",
    "requires_gpu: marks tests that require GPU",
]

[tool.coverage.run]
branch = true
source = ["cortex"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 85

[tool.mypy]
python_version = "3.11"
# pydantic.mypy teaches mypy that BaseModel fields with defaults are
# optional constructor args. Without it, every ``Model(...)`` call with a
# defaulted field emits a spurious [call-arg] "Missing named argument"
# error (~1640 across the tree). The plugin ships inside pydantic itself;
# the mypy/pydantic versions are pinned in the [dev] extra so the plugin
# ABI always matches the mypy that loads it.
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

# Tests use pytest conventions (def test_foo(): without return annotation)
# and rely on Qt / MediaPipe / Pydantic monkey-patch stubs that mypy can't
# resolve. Loosen the strict gates here so the production code stays
# fully typed without forcing every fixture to annotate -> None.
# The disable_error_code list suppresses the ``--strict``-only diagnostics
# that fire purely against pytest/Qt-stub idioms (bare dict/list generics,
# calls into untyped helpers, the lightweight PySide6 stub surface). Real
# "name does not exist" bugs in tests still surface via ``name-defined``.
[[tool.mypy.overrides]]
module = "cortex.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
disable_error_code = [
    "type-arg", "no-untyped-call", "attr-defined", "annotation-unchecked",
    "arg-type", "assignment", "union-attr", "misc", "return-value",
    "var-annotated", "index", "no-redef", "operator", "call-overload",
    "comparison-overlap", "func-returns-value",
]

# Tests directly poke private QWidget attributes that the lightweight
# PySide6 stubs intentionally don't expose; mypy can't tell. Same for
# scripts that use opt-in third-party libs (yaml). Scripts are operational
# glue, not the typed production surface, so the same strictness-noise codes
# are suppressed here.
[[tool.mypy.overrides]]
module = "cortex.scripts.*"
disallow_untyped_defs = false
warn_return_any = false
disable_error_code = ["type-arg", "no-untyped-call", "attr-defined"]

# Desktop shell uses lazy Qt imports + a stub fallback path that
# mypy cannot reconcile against the real PySide6 surface. Production
# code is type-checked via test runs; here we accept the looser gate for
# the Qt-stub-induced noise (bare generics, the try/except-import no-redef
# pattern, stub-surface union/arg mismatches). ``name-defined`` and
# ``attr-defined`` stay ENABLED so genuine missing-symbol bugs (e.g. the
# AppKit.NSObject base-class references) are still caught.
[[tool.mypy.overrides]]
module = "cortex.apps.desktop_shell.*"
disallow_untyped_defs = false
warn_return_any = false
disable_error_code = [
    "type-arg", "no-untyped-call", "no-redef", "annotation-unchecked",
    "union-attr", "arg-type", "misc", "call-overload", "override",
    "assignment", "func-returns-value",
]

# macOS-only frameworks (AVFoundation, ApplicationServices) have no
# stubs available on the Ubuntu CI runner — let those imports flow.
[[tool.mypy.overrides]]
module = ["AVFoundation", "ApplicationServices", "Foundation", "AppKit", "yaml"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "E741",  # ambiguous variable name (l, I, O) — accepted in tight list comps
]

[tool.ruff.lint.per-file-ignores]
# Tests use looser patterns: late imports after docstring/header banners,
# unused loop vars in synthetic event generators, blind exception assertions
# for schema validation, and StopAsyncIteration without `from None` is the
# canonical async-generator-end pattern.
# Patterns are relative to this pyproject.toml's location.
"tests/**/*.py" = ["E402", "B007", "B011", "B017", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["cortex"]
